--- a/iamhere-backend/package.json
+++ b/iamhere-backend/package.json
@@ -28,11 +28,13 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/passport": "^1.0.12",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "mysql2": "^3.2.0",
     "passport": "^0.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "user": "^0.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
